// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots should match snapshot for all sizes: button-large 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-10gryf7 r-paddingBlock-zo2zu6 r-paddingInline-1fkl15p"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-1i10wst"
    dir="auto"
    ref={[Function]}
  >
    large Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for all sizes: button-medium 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-ubezar"
    dir="auto"
    ref={[Function]}
  >
    medium Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for all sizes: button-small 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-2yi16 r-paddingBlock-11f147o r-paddingInline-3pj75a"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-1b43r93"
    dir="auto"
    ref={[Function]}
  >
    small Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for all variants: button-outline 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-1niwhzg r-borderColor-al7bf0 r-borderWidth-d045u9 r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-132dbb0 r-fontSize-ubezar"
    dir="auto"
    ref={[Function]}
  >
    outline Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for all variants: button-primary 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-ubezar"
    dir="auto"
    ref={[Function]}
  >
    primary Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for all variants: button-secondary 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-w43wwk r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-ubezar"
    dir="auto"
    ref={[Function]}
  >
    secondary Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for default button 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-ubezar"
    dir="auto"
    ref={[Function]}
  >
    Default Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for disabled button 1`] = `
<div
  aria-disabled={true}
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0 r-opacity-17tloay r-pointerEvents-12vffkv"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="-1"
>
  <div
    className="css-text-146c3p1 r-fontWeight-1kfrs79 r-textAlign-q4m81j r-color-jwli3a r-fontSize-ubezar"
    dir="auto"
    ref={[Function]}
  >
    Disabled Button
  </div>
</div>
`;

exports[`Button Component Snapshots should match snapshot for loading button 1`] = `
<div
  aria-disabled={true}
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-alignItems-1awozwy r-borderRadius-1q9bdsx r-flexDirection-18u37iz r-justifyContent-1777fci r-backgroundColor-gigwm3 r-minHeight-1pl7oy7 r-paddingBlock-w7s2jr r-paddingInline-cxgwc0 r-opacity-17tloay r-pointerEvents-12vffkv"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  ref={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="-1"
>
  <div
    aria-valuemax={1}
    aria-valuemin={0}
    className="css-view-g5y9jx r-alignItems-1awozwy r-justifyContent-1777fci"
    data-testid="activity-indicator"
    dir={null}
    ref={[Function]}
    role="progressbar"
  >
    <div
      className="css-view-g5y9jx r-height-z80fyv r-width-19wmn03 r-animationDuration-17bb2tj r-animationIterationCount-1muvv40 r-animationKeyframes-1yef0xd r-animationTimingFunction-1ldzwu0"
      dir={null}
      ref={[Function]}
    >
      <svg
        height="100%"
        viewBox="0 0 32 32"
        width="100%"
      >
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            {
              "opacity": 0.2,
              "stroke": "#FFFFFF",
            }
          }
        />
        <circle
          cx="16"
          cy="16"
          fill="none"
          r="14"
          strokeWidth="4"
          style={
            {
              "stroke": "#FFFFFF",
              "strokeDasharray": 80,
              "strokeDashoffset": 60,
            }
          }
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Button Component 快照测试 不同尺寸按钮快照 1`] = `null`;

exports[`Button Component 快照测试 不同尺寸按钮快照 2`] = `null`;

exports[`Button Component 快照测试 不同尺寸按钮快照 3`] = `null`;

exports[`Button Component 快照测试 主要按钮快照 1`] = `null`;

exports[`Button Component 快照测试 加载状态按钮快照 1`] = `null`;

exports[`Button Component 快照测试 禁用按钮快照 1`] = `null`;

exports[`Button Component 快照测试 默认按钮快照 1`] = `null`;
